--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,6 +1,7 @@
 <p>first works!</p>
 
+<!--===================FIRST OPRATOR===================-->
+<button (click)="firstgetData()">First</button>&nbsp;&nbsp;
 
-<button (click)="first()">First</button>
-<button (click)="Take()">Take</button>
-<button (click)="Pluck()">Pluck</button>
+<!--===================PLUCK OPRATOR===================-->
+<button (click)="PluckGetData()">Pluck</button>
