--- a/src/app/pipe/pipe.component.html
+++ b/src/app/pipe/pipe.component.html
@@ -1,4 +1,7 @@
 <p>pipe works!</p>
 
-<button (click)="pipe()">pipe</button>
-<button (click)="map()">map</button>
+<!--================== PIPE OPRATOR  =================== -->
+<button (click)="pipe()">OF | pipe | filter</button>&nbsp;&nbsp;&nbsp;
+
+<!--================== MAP OPRATOR  =================== -->
+<button (click)="map()">From | map</button>
