--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,9 @@
 <app-of></app-of>
 <app-pipe></app-pipe>
 <app-first></app-first>
+<app-concat></app-concat>
+<app-zip></app-zip>&nbsp;
+<button routerLink="combine">combine</button>
+<app-take></app-take>
+<app-switch-map></app-switch-map>
+<router-outlet></router-outlet>
