--- a/src/app/switch-map/switch-map.component.html
+++ b/src/app/switch-map/switch-map.component.html
@@ -1,5 +1,8 @@
+
+
+
+<!-- ===================SWITCHMAP OPRATOR=================== -->
 <h4> Time remaining: <span #remaining ></span> </h4>
 
 <button #pause > Pause Timer </button>
-
 <button #resume > Resume Timer </button>
