--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<h1>hello</h1>
+<h1>Rxjs OPRATOR</h1>
 <app-of></app-of>
 <app-pipe></app-pipe>
 <app-first></app-first>
 <app-concat></app-concat>
 <app-zip></app-zip>&nbsp;
-<button routerLink="combine">combine</button>
+<button routerLink="combine">combine</button>&nbsp;
 <app-take></app-take>
 <app-switch-map></app-switch-map>
 <router-outlet></router-outlet>
