--- a/src/app/of/of.component.html
+++ b/src/app/of/of.component.html
@@ -1,3 +1,6 @@
 
 <!--================== OF OPRATOR  =================== -->
-<button (click)="of()">of</button>
+<button (click)="of()">of</button>&nbsp;
+
+<!--================== TAP/Do OPRATOR  =================== -->
+<button (click)="test()"> tap</button>&nbsp;&nbsp;
