button design changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,15 @@
-<h1>Rxjs OPRATOR</h1>
-<app-of></app-of>
-<app-pipe></app-pipe>
-<app-first></app-first>
-<app-concat></app-concat>
-<app-zip></app-zip>&nbsp;
-<button routerLink="combine">combine</button>&nbsp;
-<app-take></app-take>
-<app-switch-map></app-switch-map>
+<h1 style="text-align: center;">Rxjs operators</h1>
+<div style="text-align: center; margin-top: 50px;">
+    <app-of></app-of>
+    <app-pipe></app-pipe>
+    <app-first></app-first>
+    <app-concat></app-concat>
+    <app-zip></app-zip>&nbsp;
+    <button data-label="Register" class="rainbow-hover" routerLink="combine">
+        <span class="sp">Combine</span>
+    </button>&nbsp;&nbsp;
+    <app-take></app-take>
+    <app-switch-map></app-switch-map>
+</div>
+
 <router-outlet></router-outlet>
