--- a/src/app/concat/concat.component.html
+++ b/src/app/concat/concat.component.html
@@ -1,7 +1,9 @@
-<p>concat works!</p>
-
 <!--================== CONCAT OPRATOR  =================== -->
-<button (click)="concatDataget()">concat</button>&nbsp;&nbsp;
+<button data-label="Register" class="rainbow-hover" (click)="concatDataget()">
+    <span class="sp">Concat</span>
+</button>&nbsp;&nbsp;
 
 <!--================== MERGE OPRATOR  =================== -->
-<button (click)="mergeDataget()">merge</button>&nbsp;&nbsp;
+<button data-label="Register" class="rainbow-hover" (click)="mergeDataget()">
+    <span class="sp">Merge</span>
+</button>&nbsp;&nbsp;
