--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,6 +1,9 @@
-
 <!--===================FIRST OPRATOR===================-->
-<button (click)="firstgetData()">First</button>&nbsp;&nbsp;
+<button data-label="Register" class="rainbow-hover" (click)="firstgetData()">
+    <span class="sp">First</span>
+</button>&nbsp;&nbsp;
 
 <!--===================PLUCK OPRATOR===================-->
-<button (click)="PluckGetData()">Pluck</button>
+<button data-label="Register" class="rainbow-hover" (click)="PluckGetData()">
+    <span class="sp">Pluck</span>
+</button>&nbsp;&nbsp;
