--- a/src/app/of/of.component.html
+++ b/src/app/of/of.component.html
@@ -1,6 +1,9 @@
-
 <!--================== OF OPRATOR  =================== -->
-<button (click)="of()">of</button>&nbsp;
+<button data-label="Register" class="rainbow-hover" (click)="of()">
+    <span class="sp" (click)="of()">Of</span>
+</button>&nbsp;&nbsp;
 
 <!--================== TAP/Do OPRATOR  =================== -->
-<button (click)="test()"> tap</button>&nbsp;&nbsp;
+<button data-label="Register" class="rainbow-hover" (click)="test()">
+    <span class="sp">Tap</span>
+</button>&nbsp;&nbsp;
