--- a/src/app/pipe/pipe.component.html
+++ b/src/app/pipe/pipe.component.html
@@ -1,6 +1,9 @@
-
 <!--================== PIPE OPRATOR  =================== -->
-<button (click)="pipe()">OF | pipe | filter</button>&nbsp;&nbsp;&nbsp;
+<button data-label="Register" class="rainbow-hover"  (click)="pipe()">
+    <span class="sp">OF | Pipe | Filter</span>
+</button>&nbsp;&nbsp;
 
 <!--================== MAP OPRATOR  =================== -->
-<button (click)="map()">From | map</button>
+<button data-label="Register" class="rainbow-hover" (click)="map()">
+    <span class="sp" >From | Map</span>
+</button>&nbsp;&nbsp;
