--- a/src/app/switch-map/switch-map.component.html
+++ b/src/app/switch-map/switch-map.component.html
@@ -2,7 +2,9 @@
 
 
 <!-- ===================SWITCHMAP OPRATOR=================== -->
-<h4> Time remaining: <span #remaining ></span> </h4>
+<h3> Time remaining: <span #remaining ></span> </h3>
 
-<button #pause > Pause Timer </button>
-<button #resume > Resume Timer </button>
+<button #pause > Pause Timer </button>&nbsp;&nbsp;
+<button #resume > Resume Timer </button>&nbsp;&nbsp;
+
+<!-- <button>Hover me!</button> -->
