--- a/src/app/take/take.component.html
+++ b/src/app/take/take.component.html
@@ -1,7 +1,13 @@
-
 <!-- ===================TAKE OPRATOR=================== -->
-<button (click)="Take()">Take</button>&nbsp;&nbsp;
+<button data-label="Register" class="rainbow-hover" (click)="Take()">
+    <span class="sp">Take</span>
+</button>&nbsp;&nbsp;
 
 <!-- ===================TAKEUNTIL OPRATOR=================== -->
-<button (click)="takeUntil()">takeUntil</button>&nbsp;&nbsp;
-<button (click)="takeUntil2()">takeUntil2</button>
+<button data-label="Register" class="rainbow-hover" (click)="takeUntil()">
+    <span class="sp">TakeUntil</span>
+</button>&nbsp;&nbsp;
+
+<button data-label="Register" class="rainbow-hover" (click)="takeUntil2()">
+    <span class="sp">TakeUntil2</span>
+</button>&nbsp;&nbsp;
