--- a/src/app/zip/zip.component.html
+++ b/src/app/zip/zip.component.html
@@ -1,3 +1,4 @@
-
 <!--================== ZIP OPRATOR  =================== -->
-<button (click)="getZipData()">ZipOprator</button>
+<button data-label="Register" class="rainbow-hover" (click)="getZipData()">
+    <span class="sp">ZipOprator</span>
+</button>&nbsp;&nbsp;
